# fabulous-collections

./: README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: conf.py  index.rst
src/fabulous_collections/: segment_tree.py
tests/: test_segment_tree.py
