[project]
authors = []
dependencies = []
name = "fabulous-collections"
requires-python = ">= 3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
fabulous_collections = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.tests.dependencies]
pytest = "*"
hypothesis = "*"

[tool.pixi.feature.docs.dependencies]
sphinx = "*"
shibuya = "*"

[tool.pixi.feature.tests.tasks]
tests = "pytest"

[tool.pixi.feature.docs.tasks]
docs-build = "sphinx-build --builder html docs docs/_build/html"

[tool.pixi.environments]
tests = ["tests"]
docs = ["docs"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
